# RAG_App

./: .gitignore  README.md  app.py  pyproject.toml  rag_core.py  requirements.txt
data/vector_store/: chroma.sqlite3
data/vector_store/a24f80ac-54c5-47de-b68a-51d72f505a84/: index_metadata.pickle
frontend/: index.html
frontend/static/: script.js  style.css
notebook/: document.ipynb  pdf_loader.ipynb
